tests/parser-test-files/bad-files/parse-do.4.error
error: Malformed do expression
  --> test:4:13
   |
 4 |  (define x (do))
   |               ^ expected one or more forms
